# statusx

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
script/: build.sh  install.sh  run.sh  test.sh
src/statusx/: main.py
static/: index.html
